--- a/www.nass.gov.ng/a6ecb17b3b74700c23b979f20fc4f58871e37483.yml
+++ b/www.nass.gov.ng/a6ecb17b3b74700c23b979f20fc4f58871e37483.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:25:42 GMT
+    - Fri, 23 Mar 2018 06:40:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QyU9-oGUbLW5Xr7ZNFFI%2C0; path=/
+    - PHPSESSID=zX2k7%2CeapYqHuukt56mih1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:25:42 GMT
+recorded_at: Fri, 23 Mar 2018 06:40:11 GMT
