--- a/www.nass.gov.ng/12bfbb341dc7efdb28af220debe394f0d22849c1.yml
+++ b/www.nass.gov.ng/12bfbb341dc7efdb28af220debe394f0d22849c1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:29:42 GMT
+    - Fri, 23 Mar 2018 06:44:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7%2CnUwLZrPqNjOq2ZeuIsF2; path=/
+    - PHPSESSID=QOdwpylCCr7JsrMmpZoRZ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:29:42 GMT
+recorded_at: Fri, 23 Mar 2018 06:44:10 GMT
