--- a/www.nass.gov.ng/6cc0c221cc818937c28e09512a48b09908d9ac78.yml
+++ b/www.nass.gov.ng/6cc0c221cc818937c28e09512a48b09908d9ac78.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:34:13 GMT
+    - Fri, 23 Mar 2018 06:50:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=an%2CrzLsSnM5Vlet08keIR1; path=/
+    - PHPSESSID=j%2CjuGSxmLqn%2C1a9MsqA793; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:34:13 GMT
+recorded_at: Fri, 23 Mar 2018 06:50:29 GMT
