--- a/www.nass.gov.ng/ebd13e7ca6585b73968bdd679cbd92ca80c87796.yml
+++ b/www.nass.gov.ng/ebd13e7ca6585b73968bdd679cbd92ca80c87796.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:36:40 GMT
+    - Fri, 23 Mar 2018 06:53:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eEQPuzsqBX6EbaLFJ%2CFi70; path=/
+    - PHPSESSID=LM5rZAReGrTEF5t7T21NQ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:36:40 GMT
+recorded_at: Fri, 23 Mar 2018 06:53:07 GMT
