--- a/www.nass.gov.ng/d4dfa47bb5151b685094be141c2b8a941c797862.yml
+++ b/www.nass.gov.ng/d4dfa47bb5151b685094be141c2b8a941c797862.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:38:51 GMT
+    - Fri, 23 Mar 2018 06:56:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bg-kqJ3wwWJIPVPXJHymT3; path=/
+    - PHPSESSID=E-HRD32dB6piiGbxUFV1%2C2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:38:51 GMT
+recorded_at: Fri, 23 Mar 2018 06:56:43 GMT
