--- a/www.nass.gov.ng/e02219626eb60d496503ef494d2dee3dbd60dba0.yml
+++ b/www.nass.gov.ng/e02219626eb60d496503ef494d2dee3dbd60dba0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:40:08 GMT
+    - Fri, 23 Mar 2018 06:59:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tyy%2CnCLpNaVEhfUHZ7bYi2; path=/
+    - PHPSESSID=33PUgI-B-IhuS1P4X97qv0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:40:08 GMT
+recorded_at: Fri, 23 Mar 2018 06:59:50 GMT
