--- a/www.nass.gov.ng/513234a44c43df2d38246dcd5d0c8e50836086e9.yml
+++ b/www.nass.gov.ng/513234a44c43df2d38246dcd5d0c8e50836086e9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:44:06 GMT
+    - Fri, 23 Mar 2018 07:03:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KiaosCGPIjUaW0EpGztDm1; path=/
+    - PHPSESSID=1%2CPcJ-10hyaK%2CHx5XGOKZ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:44:06 GMT
+recorded_at: Fri, 23 Mar 2018 07:03:19 GMT
