--- a/www.nass.gov.ng/a497715ee37ad322c8c1de4314e501ae418d5bbf.yml
+++ b/www.nass.gov.ng/a497715ee37ad322c8c1de4314e501ae418d5bbf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:47:00 GMT
+    - Fri, 23 Mar 2018 07:06:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=soRKvgQ0%2CPq0YjWhyygHR1; path=/
+    - PHPSESSID=7zN%2CpTfObnuJ7AbdC7Tg72; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:47:00 GMT
+recorded_at: Fri, 23 Mar 2018 07:06:30 GMT
