--- a/www.nass.gov.ng/59c82d26c7e5578cbcf9f5aba602d15eeae0adf7.yml
+++ b/www.nass.gov.ng/59c82d26c7e5578cbcf9f5aba602d15eeae0adf7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:55:26 GMT
+    - Fri, 23 Mar 2018 07:13:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=q%2Cun4%2C6%2CKjPE2JVH6U1qw1; path=/
+    - PHPSESSID=Hiaa1bLggPR173PeWsXcQ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:55:26 GMT
+recorded_at: Fri, 23 Mar 2018 07:13:39 GMT
