--- a/www.nass.gov.ng/b2bc168c207a79bb6fa26ebb701c5d857c846bbe.yml
+++ b/www.nass.gov.ng/b2bc168c207a79bb6fa26ebb701c5d857c846bbe.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:57:27 GMT
+    - Fri, 23 Mar 2018 07:16:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-G-fVF5XEBmoN-6GWmUTi2; path=/
+    - PHPSESSID=m0TBaC2izfIxhZ7xko%2Cs62; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:57:27 GMT
+recorded_at: Fri, 23 Mar 2018 07:16:07 GMT
