--- a/www.nass.gov.ng/f8cb59985283935fd75a65a5655d38728ff61607.yml
+++ b/www.nass.gov.ng/f8cb59985283935fd75a65a5655d38728ff61607.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:57:46 GMT
+    - Fri, 23 Mar 2018 07:16:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XcasztbkgNEh0bzJnOJ5J1; path=/
+    - PHPSESSID=ZGd2VCW2UGX5y8%2Czpd9T53; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:57:47 GMT
+recorded_at: Fri, 23 Mar 2018 07:16:44 GMT
