--- a/www.nass.gov.ng/f259e3c11f91dc79aacead86c6eb7f5977763090.yml
+++ b/www.nass.gov.ng/f259e3c11f91dc79aacead86c6eb7f5977763090.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 15:03:36 GMT
+    - Fri, 23 Mar 2018 07:23:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=K12GGRBgnQ5XmoBZ%2CvX1s0; path=/
+    - PHPSESSID=D7BCeJfTOYI8RkXI2qHS43; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 15:03:36 GMT
+recorded_at: Fri, 23 Mar 2018 07:23:28 GMT
