--- a/www.nass.gov.ng/70cc49eb06ea9ad447e44a9717cd058d7a8bfc8b.yml
+++ b/www.nass.gov.ng/70cc49eb06ea9ad447e44a9717cd058d7a8bfc8b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 15:06:59 GMT
+    - Fri, 23 Mar 2018 07:27:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lcC63%2C%2CL-J8RF8Zb9OtOj1; path=/
+    - PHPSESSID=ti4CSEoteLSsX6ChFrWs70; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 15:06:59 GMT
+recorded_at: Fri, 23 Mar 2018 07:27:12 GMT
