--- a/www.nass.gov.ng/482af8eeb10d9e8147427635409459291270cb47.yml
+++ b/www.nass.gov.ng/482af8eeb10d9e8147427635409459291270cb47.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 15:08:45 GMT
+    - Fri, 23 Mar 2018 07:30:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RMKzQy8tu62nxeYyW-efk0; path=/
+    - PHPSESSID=oKUWDH4WolGFi%2C7K7Kgim1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 15:08:45 GMT
+recorded_at: Fri, 23 Mar 2018 07:30:00 GMT
