--- a/www.nass.gov.ng/59a632bb2a80b8b77cf3596cf6be53a6c06c4cc1.yml
+++ b/www.nass.gov.ng/59a632bb2a80b8b77cf3596cf6be53a6c06c4cc1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 15:15:42 GMT
+    - Fri, 23 Mar 2018 07:37:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Tv%2CXQ1Hht4AAhyT7%2C%2CqWJ0; path=/
+    - PHPSESSID=oXMArVW2O3vqHV5M365pN1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 15:15:42 GMT
+recorded_at: Fri, 23 Mar 2018 07:37:46 GMT
