--- a/www.nass.gov.ng/4097dae74ae9550e9f804c4f88359e65b5dfa7d1.yml
+++ b/www.nass.gov.ng/4097dae74ae9550e9f804c4f88359e65b5dfa7d1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 15:16:19 GMT
+    - Fri, 23 Mar 2018 07:39:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=prA%2CJshOlb5mk%2CGc%2CrdAX0; path=/
+    - PHPSESSID=weWi4zTC%2CcD2jZsziHhTH3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 15:16:19 GMT
+recorded_at: Fri, 23 Mar 2018 07:39:25 GMT
