--- a/www.nass.gov.ng/066da46ef15c6b205d0cb821bc7927a80a92a3c9.yml
+++ b/www.nass.gov.ng/066da46ef15c6b205d0cb821bc7927a80a92a3c9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 15:19:22 GMT
+    - Fri, 23 Mar 2018 07:42:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oQoc0h%2CEJKtdDC22szPV33; path=/
+    - PHPSESSID=rpm4wJtYT6jXi2A136scL1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 15:19:22 GMT
+recorded_at: Fri, 23 Mar 2018 07:42:30 GMT
