--- a/www.nass.gov.ng/5a6505a156b29bc998c7a9a5661fa537c1a10bd0.yml
+++ b/www.nass.gov.ng/5a6505a156b29bc998c7a9a5661fa537c1a10bd0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 15:19:41 GMT
+    - Fri, 23 Mar 2018 07:43:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Y54lL3EZXB%2CJzO58j9cvb3; path=/
+    - PHPSESSID=lCTHoLGAXcddjogXPInxg0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 15:19:42 GMT
+recorded_at: Fri, 23 Mar 2018 07:43:24 GMT
