--- a/www.nass.gov.ng/4fead3742f5171abf87c97a01d333baceb654872.yml
+++ b/www.nass.gov.ng/4fead3742f5171abf87c97a01d333baceb654872.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 15:21:50 GMT
+    - Fri, 23 Mar 2018 07:45:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bc2Trr-dtNaT%2C7iFOQ-5x3; path=/
+    - PHPSESSID=reMZ%2CaBDNIFWcrDAmXUq92; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 15:21:50 GMT
+recorded_at: Fri, 23 Mar 2018 07:45:17 GMT
