--- a/www.nass.gov.ng/a5171c5522c4232a71dead4a30027e824371267c.yml
+++ b/www.nass.gov.ng/a5171c5522c4232a71dead4a30027e824371267c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 15:26:19 GMT
+    - Fri, 23 Mar 2018 07:49:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3nkXs47L3nSDrbDV-af%2CQ2; path=/
+    - PHPSESSID=yCnfWpyMUDTKs%2Clq6H--l1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 15:26:19 GMT
+recorded_at: Fri, 23 Mar 2018 07:49:58 GMT
