--- a/www.nass.gov.ng/fb147f01bf26aa8506e7afdf771f4521616d257f.yml
+++ b/www.nass.gov.ng/fb147f01bf26aa8506e7afdf771f4521616d257f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 15:28:20 GMT
+    - Fri, 23 Mar 2018 07:52:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VKiAlduz-6ycqGbQMx%2Crg0; path=/
+    - PHPSESSID=05dOAZvEJTHeqG%2C501J9N3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 15:28:20 GMT
+recorded_at: Fri, 23 Mar 2018 07:52:08 GMT
