--- a/www.nass.gov.ng/e28672ec42713d7e95a2cab7159f10538c6eee52.yml
+++ b/www.nass.gov.ng/e28672ec42713d7e95a2cab7159f10538c6eee52.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 15:32:52 GMT
+    - Fri, 23 Mar 2018 07:56:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tcmKiuDMRw-kT1%2CWxLyTM1; path=/
+    - PHPSESSID=5TMeF7K5yYYGVnjIgNtQd1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 15:32:52 GMT
+recorded_at: Fri, 23 Mar 2018 07:56:43 GMT
