--- a/www.nass.gov.ng/af079e37caeb1a8fad2c1325ca38fd2f80ca4e62.yml
+++ b/www.nass.gov.ng/af079e37caeb1a8fad2c1325ca38fd2f80ca4e62.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 16:05:49 GMT
+    - Fri, 23 Mar 2018 08:25:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sni2fvfGs9J%2CmEs2pzWmq2; path=/
+    - PHPSESSID=Iu1jqtR1zRZL4Am6rmRkf1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 16:05:49 GMT
+recorded_at: Fri, 23 Mar 2018 08:25:56 GMT
