--- a/www.nass.gov.ng/aa84141d30f5a6828bc5a5c4a11f70841ac0f2a4.yml
+++ b/www.nass.gov.ng/aa84141d30f5a6828bc5a5c4a11f70841ac0f2a4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 16:08:48 GMT
+    - Fri, 23 Mar 2018 08:32:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZKuaLGybilM4zOMZrcrU52; path=/
+    - PHPSESSID=mVG%2Cx5YXt2gs1v5mU1dQR0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 16:08:48 GMT
+recorded_at: Fri, 23 Mar 2018 08:32:04 GMT
