--- a/www.nass.gov.ng/f49149dcb79069b66f19c5abde83e1785d7ac6cf.yml
+++ b/www.nass.gov.ng/f49149dcb79069b66f19c5abde83e1785d7ac6cf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 16:13:53 GMT
+    - Fri, 23 Mar 2018 08:38:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ny8QOlqhykBIdeAjpx5LH2; path=/
+    - PHPSESSID=shd7IrRaegJQ%2CKWZ6dJ1L3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 16:13:53 GMT
+recorded_at: Fri, 23 Mar 2018 08:38:06 GMT
