--- a/www.nass.gov.ng/c281ad9139192942b0886c51466c6460900e50c0.yml
+++ b/www.nass.gov.ng/c281ad9139192942b0886c51466c6460900e50c0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 16:22:53 GMT
+    - Fri, 23 Mar 2018 08:47:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QbnppN-Xi2SvtsNGtc-wB0; path=/
+    - PHPSESSID=j7Cki0ZbCEKv7%2CBgnlRGc2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 16:22:53 GMT
+recorded_at: Fri, 23 Mar 2018 08:47:22 GMT
