--- a/www.nass.gov.ng/f4fd1df228cf6325ce20a78e624c01a0e461c647.yml
+++ b/www.nass.gov.ng/f4fd1df228cf6325ce20a78e624c01a0e461c647.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 16:34:40 GMT
+    - Fri, 23 Mar 2018 08:57:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CPmlknR5AgUOFSGVs9wpT2; path=/
+    - PHPSESSID=%2Cz96tef0%2CVIGdHB2LiV9B1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 16:34:40 GMT
+recorded_at: Fri, 23 Mar 2018 08:57:01 GMT
