--- a/www.nass.gov.ng/7a2da2d9faeade71beb122830caf9f7f9fc82888.yml
+++ b/www.nass.gov.ng/7a2da2d9faeade71beb122830caf9f7f9fc82888.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 16:38:28 GMT
+    - Fri, 23 Mar 2018 09:00:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Io5wCALjwDfPbSeA%2CMUv72; path=/
+    - PHPSESSID=HE6Jsv1i1CNYIynvDa2eP2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 16:38:28 GMT
+recorded_at: Fri, 23 Mar 2018 09:00:56 GMT
