--- a/www.nass.gov.ng/49a6cd159ab5a85819e2996833bc115735063aff.yml
+++ b/www.nass.gov.ng/49a6cd159ab5a85819e2996833bc115735063aff.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 16:39:01 GMT
+    - Fri, 23 Mar 2018 09:01:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EPqi3IkOE7oEi5BS22Zl81; path=/
+    - PHPSESSID=5DTUIKlT-LTBv%2CyF7t1Nl0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 16:39:01 GMT
+recorded_at: Fri, 23 Mar 2018 09:01:34 GMT
